; ModuleID = '/home/carl/AnghaBench/redis/src/extr_ziplist.c_zipStorePrevEntryLengthLarge.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_ziplist.c_zipStorePrevEntryLengthLarge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZIP_BIG_PREVLEN = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zipStorePrevEntryLengthLarge(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i8, i8* @ZIP_BIG_PREVLEN, align 1
  %9 = load i8*, i8** %3, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 0
  store i8 %8, i8* %10, align 1
  %11 = load i8*, i8** %3, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 1
  %13 = call i32 @memcpy(i8* %12, i32* %4, i32 4)
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  %16 = call i32 @memrev32ifbe(i8* %15)
  br label %17

17:                                               ; preds = %7, %2
  ret i32 5
}

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @memrev32ifbe(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
